# .matplotlib

./: .gitignore  BETplot for raw_20220322_for csv.py  BETplot_for_csv.py  Battery_GCD cycle plot.py  Battery_GCD cycle plot_220503.py  Battery_GCD_wonatech.py  Battery_GCDcycle.py  Battery_GCDplot for wonatech_unifying.py  Battery_GCDplot_old.py  Battery_GCDplot_wonatech.py  Battery_cycle.py  EC_DLC_from_CV_mpt.py  EC_DLCplot from CV.py  EC_DLCplot_from_CV.py  EC_DLCplot_from_CV_old.py  Player.py  README.md  Strength_csv.py  Supercap_GCD plot for Wonatech(xlsx).py  Supercap_GCD plot for Wonatech(xlsx)_220422.py  Supercap_GCD plot_Wonatech.py  Supercap_GCD_mpt.py  Supercap_GCDplot for mpt file.py  Supercap_GCDplot for mpt file_220506.py  Supercap_GCDplot_mpt.py  for galvani module.txt  loadexp.py  pyproject.toml  requirements.txt  setup.py  test.py
.pylint.d/: Battery_GCD_wonatech1.stats  Battery_cycle1.stats  EC_DLC_from_CV_mpt1.stats  Player1.stats  Supercap_GCD_Wonatech1.stats  Supercap_GCD_mpt1.stats  loadexp1.stats
CSR/: BET_from_simple.py  Battery_GCD_wonatech.py  Battery_cycle.py  Capacity_from_mpr.py  EC_DLC_fit_report.py  EC_DLC_from_CV_mpt.py  EC_DLCplot_from_CV_old.py  EIS_wonatech.py  Export_path.py  ORR and OER_mpt.py  Other_EMI.py  Pkl2Excel.py  Player.py  Pqt2Excel.py  Set_path.py  Strength_csv.py  Supercap_GCD_Wonatech.py  Supercap_GCD_mpt-2.py  Supercap_GCD_mpt.py  Supercap_GCD_mpt_legacy.py  Supercap_mpr.py  Unifiying wrd.py  Wonatech_CSV_reordering.py  __main__.py  bat_ex.py  loadexp.py  loadexp2.py  mover.py  mpt_separation.py  pilot.py  postdoc.xlsx  (+2 more)
(+7 files in other folders)
