[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CSR"
version = "0.1.0"
authors = [ { name = "Jae Yeong Cheon", email = "chun3720@hotmail.com" }, ]
description = " Code for scientific research"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Freeware",
    "Operating System :: OS Independent",

]

[project.urls]
"Homepage" = "https://github.com/chun3720"

